# Codeshift

./: .env.local  .gitignore  .pre-commit-config.yaml  .replit  CLAUDE.md  CONTRIBUTING.md  FEATURE_REVIEW_SUMMARY.md  LICENSE  README.md  SECURITY_FIXES_REPORT.md  action.yml  commitlint.config.js  noxfile.py  pyproject.toml  replit.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES_PROPOSALS/: README.md  issue1.md  issue10.md  issue2.md  issue3.md  issue4.md  issue5.md  issue6.md  issue7.md  issue8.md  issue9.md
.github/actions/codeshift-migrate/: action.yml
.github/workflows/: auto-release.yml  ci.yml  commitlint.yml  deploy-landing-page.yml  deploy-replit.yml  publish.yml  release.yml  test-action.yml  update-major-tag.yml
action-scripts/: create_pr.py  write_summary.py
assets/: .gitkeep  demo_models.py
codeshift/: __init__.py
codeshift-cli/: .gitignore  CODE_OF_CONDUCT.md  pyproject.toml
codeshift-cli/.github/: CODEOWNERS
codeshift-cli/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
codeshift-cli/.github/workflows/: release.yml
codeshift-cli/codeshift/knowledge/: parser.py
codeshift-cli/codeshift/migrator/: __init__.py  llm_migrator.py
codeshift-cli/codeshift/utils/: api_client.py  credential_store.py  llm_client.py
codeshift-cli/docs/: getting_started.md
codeshift-cli/tests/stress_tests/: __init__.py  sample_flask_app.py  test_stress_aiohttp_async.py  test_stress_attrs_classes.py  test_stress_celery_tasks.py  test_stress_celery_tasks_migrated.py  test_stress_click_cli.py  test_stress_django_complex.py  test_stress_exception_patterns.py  test_stress_fastapi_pydantic.py  test_stress_flask_to_fastapi.py  test_stress_httpx_client.py  test_stress_library_migrations.py  test_stress_marshmallow_schemas.py  test_stress_multi_library.py  test_stress_numpy_scientific.py  test_stress_pandas_heavy.py  test_stress_pydantic_complex.py  test_stress_pytest_fixtures.py  test_stress_python2_to_3.py  test_stress_requests_urllib3.py  test_stress_sqlalchemy_complex.py  test_stress_sqlalchemy_complex_migrated.py  test_stress_threading_asyncio.py  test_stress_type_hints_add.py
codeshift-server/: pyproject.toml
codeshift-server/codeshift_server/: __init__.py  main.py
codeshift-server/codeshift_server/middleware/: __init__.py  rate_limit.py
codeshift-server/codeshift_server/models/: __init__.py  migrate.py
codeshift-server/codeshift_server/routers/: __init__.py  migrate.py
codeshift-server/codeshift_server/utils/: __init__.py  prompt_sanitizer.py  quota_manager.py  usage_tracker.py
codeshift/api/: __init__.py  auth.py  config.py  database.py  main.py
codeshift/api/migrations/: 002_waitlist_table.sql
codeshift/api/models/: __init__.py  auth.py
codeshift/api/routers/: __init__.py  auth.py  billing.py  migrate.py  usage.py  webhooks.py
codeshift/cli/: __init__.py  main.py
codeshift/cli/commands/: __init__.py  apply.py  auth.py  health.py  scan.py  upgrade.py  upgrade_all.py
codeshift/health/: __init__.py  calculator.py  models.py  report.py
codeshift/health/metrics/: __init__.py  documentation.py  freshness.py  migration_readiness.py  security.py  test_coverage.py
codeshift/knowledge/: generator.py  parser.py
codeshift/knowledge_base/libraries/: aiohttp.yaml  httpx.yaml  pytest.yaml
codeshift/migrator/: __init__.py  engine.py  llm_migrator.py
codeshift/migrator/transforms/: __init__.py  fastapi_transformer.py  marshmallow_transformer.py  pydantic_v1_to_v2.py  requests_transformer.py  sqlalchemy_transformer.py
codeshift/scanner/: code_scanner.py  dependency_parser.py
codeshift/utils/: __init__.py  api_client.py  cache.py  credential_store.py  llm_client.py  path_safety.py
codeshift/validator/: test_runner.py
docs/: BILLING_INFRASTRUCTURE.md  FEATURE_PROPOSALS.md  GO_LIVE_PLAN.md  GO_TO_MARKET.md  INTEGRATION_TEST_RESULTS.md  MASTER_PLAN.md  MONETIZATION.md  PRIORITY_FEATURES.md  getting_started.md  github-action.md
examples/workflows/: manual-migration.yml  pr-scan.yml  weekly-migration.yml
landing-page/: app.js  index.html  styles.css
llm_test_projects/project_aiohttp/: requirements.txt  session.py
llm_test_projects/project_attrs/: models.py
llm_test_projects/project_boto3/: s3_operations.py
llm_test_projects/project_celery/: requirements.txt  tasks.py
llm_test_projects/project_click/: cli.py
llm_test_projects/project_django/: models.py  urls.py
llm_test_projects/project_elasticsearch/: requirements.txt  search_client.py
llm_test_projects/project_httpx/: client.py
llm_test_projects/project_mongoengine/: documents.py  requirements.txt
llm_test_projects/project_redis/: redis_client.py
pyresolve/: __init__.py
pyresolve/analyzer/: __init__.py  risk_assessor.py
pyresolve/api/: auth.py  config.py  database.py  main.py
pyresolve/api/migrations/: 001_initial_schema.sql
pyresolve/api/models/: __init__.py  auth.py  billing.py  migrate.py  usage.py
pyresolve/api/routers/: __init__.py  auth.py  billing.py  migrate.py  usage.py  webhooks.py
pyresolve/cli/: __init__.py  main.py  quota.py
pyresolve/knowledge/: __init__.py  cache.py  generator.py  models.py  parser.py  sources.py
pyresolve/knowledge_base/: __init__.py  loader.py  models.py
pyresolve/migrator/: __init__.py  ast_transforms.py  engine.py  llm_migrator.py
pyresolve/scanner/: __init__.py  code_scanner.py  dependency_parser.py
pyresolve/utils/: __init__.py  api_client.py  cache.py  config.py  llm_client.py
pyresolve/validator/: __init__.py  syntax_checker.py  test_runner.py
supabase/.temp/: pooler-url  project-ref
tests/: __init__.py  conftest.py  test_auth.py  test_code_scanner.py  test_fastapi_transforms.py  test_health.py  test_knowledge_base.py  test_marshmallow_transforms.py  test_pandas_transforms.py  test_pydantic_transforms.py  test_requests_transforms.py  test_risk_assessor.py  test_security.py  test_sqlalchemy_transforms.py  test_syntax_checker.py
tests/fixtures/: pydantic_v1_samples.py
tests/integration/: TESTING_PLAN.md  __init__.py
(+19 files in other folders)
