[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyresolve"
version = "0.1.2"
description = "AI-powered CLI tool that migrates Python code to handle breaking dependency changes"
readme = "README.md"
license = {text = "Elastic-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "PyResolve Team"}
]
keywords = ["migration", "dependencies", "ast", "refactoring", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "libcst>=1.0",
    "anthropic>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
    "toml>=0.10",
    "packaging>=23.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
pyresolve = "pyresolve.cli.main:cli"

[project.urls]
Homepage = "https://github.com/youssefragab/PyResolve"
Repository = "https://github.com/youssefragab/PyResolve"
Issues = "https://github.com/youssefragab/PyResolve/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyresolve*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
