[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeshift-server"
version = "0.1.0"
description = "FastAPI backend for authentication, billing, and server-side LLM migrations"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["migration", "api", "fastapi", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "anthropic>=0.20",
    "stripe>=7.0",
    "python-jose>=3.3",
    "passlib>=1.7",
    "slowapi>=0.1.9",
]

[[project.authors]]
name = "Ragab Technologies"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0,<25.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/Ragab-Technologies/Codeshift"
Repository = "https://github.com/Ragab-Technologies/Codeshift"
Issues = "https://github.com/Ragab-Technologies/Codeshift/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codeshift_server*"]

[tool.ruff.lint.isort]
known-first-party = ["codeshift_server"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
